@@ -48,5 +48,6 @@ Makefile
 compose/Makefile
 include/Makefile
 src/Makefile
+pixmaps/Makefile
 po/Makefile.in
 ])
