@@ -3,6 +3,7 @@ Encoding=UTF-8
 _Name=GParted
 _Comment=Gnome Partition Editor
 Exec=gparted
+Icon=gparted.png
 Terminal=false
 Type=Application
 Categories=GNOME;Application;System;
