@@ -1,0 +1,4 @@
+appicondir = $(datadir)/pixmaps
+appicon_DATA = gparted.png
+
+EXTRA_DIST = $(appicon_DATA) 
