@@ -1,4 +1,8 @@
 2005-11-25 Bart Hakvoort <hakvoort@cvs.gnome.org>
+	* gparted finally has a logo/icon ;) (thanks to Alain Clement)
+	  see also #162092
+
+2005-11-25 Bart Hakvoort <hakvoort@cvs.gnome.org>
 	* include/.cvsignore,
 	  src/.cvsignore: added *.swp
 	* Makefile.am,
